Grace/tests/gibbs/errors/t045.grace
// ERROR = P1032
method() {
    print(42)
}
